# horalix-view

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  README.md  WINDOWS_SETUP.md
.github/workflows/: ci.yml
backend/: .env.example  SETUP.md  alembic.ini  pyproject.toml  setup.bat  setup.ps1  setup.sh
backend/alembic/: env.py
backend/alembic/versions/: 20240115_000000_001_initial_schema.py  20260119_000000_002_add_annotations_table.py
backend/app/: __init__.py  __main__.py  cli.py  main.py
backend/app/api/: __init__.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: __init__.py  admin.py  ai.py  annotations.py  auth.py  dashboard.py  dicomweb.py  export.py  health.py  instances.py  patients.py  series.py  studies.py
backend/app/core/: __init__.py  config.py  logging.py  security.py
backend/app/models/: __init__.py  annotation.py  audit.py  base.py  instance.py  job.py  patient.py  series.py  study.py  user.py
backend/app/services/: __init__.py  demo_data.py
backend/app/services/ai/: __init__.py  base.py  dicom_loader.py  model_registry.py
backend/app/services/ai/external_runners/: __init__.py  echonet_measurements.py  hovernet.py  prov_gigapath.py
backend/app/services/ai/models/: __init__.py  external_command.py  medsam_segmenter.py  monai_segmenter.py  yolov8_detector.py
backend/app/services/dicom/: __init__.py  export.py  networking.py  parser.py  storage.py
backend/tests/: __init__.py  conftest.py
backend/tests/api/: test_ai_models_endpoint.py  test_ai_results_render.py  test_instances_pixel_data.py  test_patients_endpoint.py  test_series_tracking.py  test_studies.py  test_studies_upload.py
backend/tests/services/ai/: test_ai_models.py  test_external_command_model.py
backend/tests/unit/: __init__.py  test_config.py
docker/: .env.example  Dockerfile.backend  Dockerfile.frontend  docker-compose.yml  entrypoint.sh  nginx.conf
docs/: AI_MODELS.md  ARCHITECTURE.md  BLANK_SCREEN_ROOT_CAUSE.md  INCIDENT_REPORT.md  QA_REPORT.md  RUNBOOK.md  SECURITY.md  TROUBLESHOOTING.md
docs/ADR/: ADR-001-system-architecture.md  ADR-002-technology-stack.md  ADR-003-ai-model-integration.md
e2e/: package.json  playwright.config.ts
e2e/fixtures/: sample.dcm
e2e/tests/: critical-workflows.spec.ts  dashboard.spec.ts
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/docker/: nginx.conf
frontend/src/: App.test.tsx  App.tsx  i18n.ts  index.css  integration.test.tsx  main.tsx
frontend/src/components/common/: ErrorBoundary.tsx  ProtectedRoute.tsx
frontend/src/components/layout/: MainLayout.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/features/viewer/: index.ts
frontend/src/features/viewer/__tests__/: coordinateService.test.ts  geometryService.test.ts  useMeasurementStore.test.ts
frontend/src/features/viewer/components/: index.ts
frontend/src/features/viewer/components/CineControls/: CineControls.tsx  index.ts
frontend/src/features/viewer/components/MPR/: MPRCrosshair.tsx  MPRLayout.tsx  MPRViewport.tsx  index.ts
frontend/src/features/viewer/components/MeasurementPanel/: MeasurementListItem.tsx  MeasurementPanel.tsx  index.ts
frontend/src/features/viewer/components/ViewerToolbar/: ToolButton.tsx  ViewerToolbar.tsx  WindowLevelMenu.tsx  index.ts
frontend/src/features/viewer/components/Viewport/: MeasurementOverlay.tsx  Viewport.tsx  index.ts
frontend/src/features/viewer/components/Viewport/renderers/: LineMeasurementRenderer.tsx  PolygonMeasurementRenderer.tsx  index.ts
frontend/src/features/viewer/constants/: index.ts  viewer.constants.ts
frontend/src/features/viewer/hooks/: index.ts  useMPRStore.ts  useMeasurementStore.ts  useSegmentationStore.ts  useUndoRedo.ts  useViewerStore.ts  useViewportInteraction.ts
frontend/src/features/viewer/services/: coordinateService.ts  exportService.ts  geometryService.ts  index.ts  measurementPersistence.ts
frontend/src/features/viewer/types/: aiSegmentation.types.ts  index.ts  measurement.types.ts  mpr.types.ts  tool.types.ts  viewer.types.ts
frontend/src/pages/: AIModelsPage.tsx  AdminPage.tsx  DashboardPage.tsx  LoginPage.tsx  PatientListPage.tsx  SettingsPage.tsx  StudyListPage.tsx  ViewerPage.tsx
frontend/src/services/: api.ts  apiClient.ts  authService.ts
frontend/src/themes/: ThemeProvider.tsx
frontend/src/utils/: cornerstone.ts  overlayMapping.test.ts  overlayMapping.ts
models/medsam/: README.txt
scripts/: doctor.ps1  doctor.sh  purge_demo_data.py  smoke-test.ps1  smoke-test.sh
