[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "horalix-view-backend"
version = "1.0.0"
description = "Horalix View - Advanced DICOM Viewer Backend with AI Capabilities"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Horalix Team", email = "dev@horalix.io"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "email-validator>=2.1.0",
    "pydicom>=2.4.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "pillow>=10.2.0",
    "opencv-python-headless>=4.9.0",
    "SimpleITK>=2.3.0",
    "nibabel>=5.2.0",
    "vtk>=9.3.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.0,<4.1.0",
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "httpx>=0.26.0",
    "aiofiles>=23.2.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
    "prometheus-client>=0.19.0",
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
    "cryptography>=41.0.0",
    "highdicom>=0.22.0",
    "pynetdicom>=2.0.0",
    "dicomweb-client>=0.59.0",
    "fhir.resources>=7.1.0",
]

[project.optional-dependencies]
# AI dependencies - install with: pip install -e ".[ai]"
# NOTE: For CUDA support, install PyTorch separately first:
#   pip install torch torchvision --index-url https://download.pytorch.org/whl/cu121
# For CPU only:
#   pip install torch torchvision --index-url https://download.pytorch.org/whl/cpu
ai = [
    # Core ML frameworks
    "torch>=2.2.0",
    "torchvision>=0.17.0",

    # Detection - YOLOv8
    "ultralytics>=8.1.0",

    # Segmentation - MONAI
    "monai>=1.3.0",

    # Interactive Segmentation - SAM/MedSAM
    "segment-anything>=1.0",

    # Supporting libraries
    "einops>=0.7.0",
    "scikit-learn>=1.4.0",
]

# Extended AI dependencies for additional models
ai-full = [
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "timm>=0.9.12",
    "monai>=1.3.0",
    "nnunetv2>=2.3.0",
    "segment-anything>=1.0",
    "ultralytics>=8.1.0",
    "transformers>=4.37.0",
    "einops>=0.7.0",
    "diffusers>=0.25.0",
    "accelerate>=0.26.0",
    "scikit-learn>=1.4.0",
    "albumentations>=1.3.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "black>=24.1.0",
    "ruff>=0.1.14",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "httpx>=0.26.0",
]

[project.urls]
Homepage = "https://github.com/horalix/horalix-view"
Documentation = "https://horalix.io/docs"
Repository = "https://github.com/horalix/horalix-view"

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "D", "UP", "S", "B", "A", "C4", "T20", "RET", "SIM"]
ignore = ["D100", "D104", "D106", "D203", "D213"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=app --cov-report=term-missing"
